show now working

--- a/food_db_associations/app/views/cuisines/new.html.erb
+++ b/food_db_associations/app/views/cuisines/new.html.erb
@@ -19,4 +19,8 @@
 		<%= form.submit 'New Cuisine' %>
 	</div>
 
+	<div class="home">
+		<%= link_to "Home", cuisines_path(@cuisines) %>
+	</div>
+
 <% end %>
