--- a/food_db_associations/app/views/cuisines/index.html.erb
+++ b/food_db_associations/app/views/cuisines/index.html.erb
@@ -1,7 +1,7 @@
 <h1>index</h1>
 
 <% @cuisines.each do |cuisine| %>
-	<h2><%= link_to cuisine.name  %></h2>
+	<h2><%= link_to cuisine.name, cuisine %></h2>
 	<p><%= cuisine.description %></p>
 <% end %>
 
