--- a/food_db_associations/app/views/cuisines/edit.html.erb
+++ b/food_db_associations/app/views/cuisines/edit.html.erb
@@ -16,7 +16,7 @@
 		<%= form.text_field :description %>
 	</div>
 	<div class="action">
-		<%= form.submit 'New Cuisine' %>
+		<%= form.submit 'Update Cuisine' %>
 	</div>
 <% end %>
 
